--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "express-basic-auth": "^1.2.1",
     "geoip-lite": "^1.4.10",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
