--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "express": "^5.1.0",
     "express-basic-auth": "^1.2.1",
     "geoip-lite": "^1.4.10",
     "passport": "^0.7.0",
@@ -73,6 +74,9 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "jest": {
     "moduleFileExtensions": [
